2002-05-13  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSColor.m
	In initSystemColors() and systemColorWithName() replaced
	implementation of system colours with named colours from a stored
	colour list. Added conversion cache for named colours. This allows
	easy configuration of system colours while keeping the same performance.
	* Source/NSFont.m
	Moved the caching of fonts from [initWithName:matrix:] to
	[fontWithName:matrix:] so that unneeded fonts are no longer
	created. In [labelFontSize], [smallSystemFontSize] and
	[systemFontSize] get values from defaults if available. In
	getNSFont() removed hard coded 12, will be relaced by default for
	NSUserFontSize. 
	
Sun May 12 10:08:34 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/gui/NSTextView.h: Removed ivar
	_tvf.is_in_dealloc.
	* Source/NSTextView.m ([-dealloc]): Set the textStorage to nil
	when releasing it; run the other dealloc cleanups during the
	recursive invocation rather than during the first invocation; use
	the _textStorage ivar instead of _tvf.is_in_dealloc.  (Patch by
	Alexander Malmberg <alexander@malmberg.org>).

2002-05-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSStringDrawing.m: drawRun() use GSFromUnicode() API for
	conversion.

Fri May 10 11:24:38 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSRulerView.m ([NSRulerView -dealloc]): Do not release the 
	scrollview (Suggested by Benhur Stein <benhur@inf.ufsm.br>).

2002-05-07  Adam Fedor  <fedor@gnu.org>

	* Source/NSFont.m (-initWithName:matrix:): If matrix
	is ident, set matrixExplicitlySet to NO
	(-set): If the focus view is flipped and matrix not set, set our
	flipped font equivalent.

2002-05-06  Adam Fedor  <fedor@gnu.org>

	* Source/NSGraphicsContext.m: More documentation.
	* Source/NSStringDrawing.m (drawRun): stroke the underline.	

2002-05-02  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Update to autoconf 2.53 from configure.in
	* configure, Headers/gnustep/gui/config.h.in: Regenerate.