@@ -1,3 +1,9 @@
+2002-05-13  Georg Fleischmann
+
+	* gui/Source/NSPrintOperation.m
+	[NSPrintOperation(GSEPSPrintOperation) -createContext:]:
+	add local autorelease pool to remove autorelease of context.
+
 2002-05-13  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSColor.m
